# Flappy-Cpp

./: .gitignore  CMakeLists.txt  GAMEFONT_FIX_SUMMARY.md  README.md
include/flappyBird/objects/: Bird.hpp  Pipe.hpp  PipeManager.hpp  PipePair.hpp
include/flappyBird/states/: BaseState.hpp  PlayState.hpp  StateMachine.hpp
include/flappyBird/utils/: GameFont.hpp  config.h
libs/SFML/include/SFML/: Config.hpp
libs/SFML/lib/: libsfml-audio.3.0.dylib  libsfml-graphics.3.0.dylib  libsfml-network.3.0.dylib  libsfml-system.3.0.dylib  libsfml-window.3.0.dylib
libs/SFML/lib/cmake/SFML/: SFMLAudioSharedTargets-release.cmake  SFMLConfig.cmake  SFMLGraphicsSharedTargets-release.cmake  SFMLNetworkSharedTargets-release.cmake  SFMLSystemSharedTargets-release.cmake  SFMLWindowSharedTargets-release.cmake
src/: CMakeLists.txt  main.cpp
src/objects/: Bird.cpp  Pipe.cpp  PipeManager.cpp  PipePair.cpp
src/states/: PlayState.cpp  StateMachine.cpp
src/utils/: gamefont.cpp
